add post product and fix get review
